--- a/templates/base.html
+++ b/templates/base.html
@@ -180,6 +180,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link {% if 'email_draft' in request.endpoint %}active{% endif %}" href="/email/drafts">
+                            <i class="bi bi-envelope"></i> Email Drafts
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'transcribe' %}active{% endif %}" href="{{ url_for('transcribe') }}">
                             <i class="bi bi-mic"></i> Transcribe Audio
                         </a>
