--- a/templates/base.html
+++ b/templates/base.html
@@ -180,6 +180,16 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link {% if request.endpoint == 'calendar' %}active{% endif %}" href="{{ url_for('calendar') }}">
+                            <i class="bi bi-calendar3"></i> Calendar
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.endpoint == 'billing' %}active{% endif %}" href="{{ url_for('billing') }}">
+                            <i class="bi bi-receipt"></i> Billing
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link {% if 'email_draft' in request.endpoint %}active{% endif %}" href="/email/drafts">
                             <i class="bi bi-envelope"></i> Email Drafts
                         </a>
@@ -187,6 +197,11 @@
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'transcribe' %}active{% endif %}" href="{{ url_for('transcribe') }}">
                             <i class="bi bi-mic"></i> Transcribe Audio
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.endpoint == 'settings' %}active{% endif %}" href="{{ url_for('settings') }}">
+                            <i class="bi bi-gear"></i> Settings
                         </a>
                     </li>
                     <li class="nav-item mt-4">
@@ -218,7 +233,7 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li><a class="dropdown-item" href="#">Profile</a></li>
-                            <li><a class="dropdown-item" href="#">Settings</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('settings') }}">Settings</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item text-danger" href="{{ url_for('logout') }}">Logout</a></li>
                         </ul>
