--- a/templates/base.html
+++ b/templates/base.html
@@ -204,6 +204,11 @@
                             <i class="bi bi-gear"></i> Settings
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('portal_login') }}">
+                            <i class="bi bi-box-arrow-in-right"></i> Client Portal
+                        </a>
+                    </li>
                     <li class="nav-item mt-4">
                         <a class="nav-link text-danger" href="{{ url_for('logout') }}">
                             <i class="bi bi-box-arrow-right"></i> Logout
